--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="content">
         <div class="bg-part"></div>
         
-        <h2 class="section-heading">Mil810</h2>
+        <h2 class="section-heading">Restaurant Mil810</h2>
 		  <div class="texts">
 		  	<p class="additional-text up">BRANDING</p>
 			<p class="additional-text down">VIEW CASE STUDY</p>
@@ -110,7 +110,7 @@
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
-  
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
 
     <script  src="js/index.js"></script>
     <script  src="js/mouse.js"></script>
