--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/png" href="imgs/fav.png" />
-
+	
 </head>
 
 <body>
@@ -89,7 +89,7 @@
 	
 	<footer>
                  <div class="foot">
-                      <h3>selected projects</h3>
+                      <h3>all projects</h3>
                   </div>
         		<div class="sidebar-hover">
                     <h3> <p class="pagination">
