--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <div class="bg-part"></div>
 		  
 		  <div class="box">
-		   <h2 class="section-heading">Calicalabozo</h2>
+			  <a href="calicalabozo.html">
+		   		<h2 class="section-heading">Calicalabozo</h2>
+			  </a>
 		  </div>
 		  <div class="texts">
 		  	<p class="additional-text up">WEBSITE</p>
