--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="bg-part"></div>
 		  
 		  <div class="box">
-			  <a href="calicalabozo.html">
+			  <a href="calicalabozo.html" style="text-decoration:none; color:#000000">
 		   		<h2 class="section-heading">Calicalabozo</h2>
 			  </a>
 		  </div>
