--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Juan Castro • Interactive Designer</title>
     
     <link rel="stylesheet" href="css/style.css">
-	<link rel="icon" type="image/png" href="imgs/fav.png" />
+	<link rel="icon" type="image/png" href="imgs/fav.png"/>
+	
+	<meta name="description" content="Juan Castro is an Interactive Designer focus on Art Direction, Motion Graphics and User Experience.">
 	
 </head>
 
