--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -38,7 +38,9 @@
 		
 			<div class="container">
 				<div class="media hov">
-					<img src="imgs/bg-project-1.png" >
+					<div class="cont-media">
+						<img src="imgs/bg-project-1.png" >
+					</div>
 				</div>
 				<div class="media">
 					<img src="imgs/work-1.png" >
@@ -71,7 +73,7 @@
 			<div class="container">
 				
 				<div class="text-block">
-					<p class="description">The Biography contains information about all the writer path.</p>
+					<p class="description">The Biography contains information about all the writer's path in order to give context to the users. In this timeline users have the option to read the short stories and see pictures or videos related to his work.</p>
 				</div>
 				
 				<div class="media">
