--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="icon" type="image/png" href="imgs/fav.png"/>
 	
 	<meta name="description" content="Juan Castro is an Interactive Designer focus on Art Direction, Motion Graphics and User Experience.">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/barba.js/1.0.0/barba.min.js" type="text/javascript"></script>
+<script src="barba.min.js" type="text/javascript"></script>
 
 </head>
 
@@ -36,7 +36,7 @@
 <!-- <div id="pointer"></div>-->
   	<div id="follower"></div>
 	
-  <div class="sections">
+  <div class="barba-container sections">
     <div class="section section-1">
       <div class="content">
         <div class="bg-part"></div>
@@ -44,11 +44,9 @@
 		  <div class="box">
 			  
 			  
-			<div class="wrapper"> 
 			  <a href="calicalabozo.html" style="text-decoration:none; color:#000000">
 		   		<h2 class="section-heading">Calicalabozo</h2>
 			  </a>
-				</div> 
 		  </div>
 		  <div class="texts">
 		  	<p class="additional-text up">WEBSITE</p>
