--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     
     <link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/png" href="imgs/fav.png"/>
-	
+	<script src="js/barba.min.js" type="text/javascript"></script>
+
 	<meta name="description" content="Juan Castro is an Interactive Designer focus on Art Direction, Motion Graphics and User Experience.">
-<script src="barba.min.js" type="text/javascript"></script>
 
 </head>
 
