--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         	<div id="follower"></div>
 		</div>-->
     
-  <div id="batba-wrapper" class="main">
+  <div id="barba-wrapper" class="main">
   
 <!-- <div id="pointer"></div>-->
   	<div id="follower"></div>
