--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 		</div>-->
     
   <div id="barba-wrapper" class="main">
-  
+  <div class="barba-container">
 <!-- <div id="pointer"></div>-->
   	<div id="follower"></div>
 	
-  <div class="barba-container sections">
+  <div class="sections">
     <div class="section section-1">
       <div class="content">
         <div class="bg-part"></div>
@@ -97,6 +97,7 @@
     </div>
     
   </div>
+	  </div>
 </div>
 	
 	
