--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
 		</div>-->
     
   <div id="barba-wrapper" class="main">
+  
 <!-- <div id="pointer"></div>-->
   	<div id="follower"></div>
 	
-  <div class="sections">
-	    <div class="barba-container">
-
+  <div class="barba-container sections">
     <div class="section section-1">
       <div class="content">
         <div class="bg-part"></div>
@@ -98,7 +97,6 @@
     </div>
     
   </div>
-	  </div>
 </div>
 	
 	
