--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 </head>
 
-<body class="hidden">
+<body id="barba-wrapper" class="hidden">
+	
+	<div class="barba-container">
 		<nav>
 				<div class="logo">
 					<img src="imgs/logo-black.svg">
@@ -31,12 +33,12 @@
         	<div id="follower"></div>
 		</div>-->
     
-  <div id="barba-wrapper" class="main">
+  <div class="main">
   
 <!-- <div id="pointer"></div>-->
   	<div id="follower"></div>
 	
-  <div class="barba-container sections">
+  <div class="sections">
     <div class="section section-1">
       <div class="content">
         <div class="bg-part"></div>
@@ -120,6 +122,8 @@
 	  
 			
 	   </footer>
+		
+	</div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
