--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
         	<div id="follower"></div>
 		</div>-->
     
-  <div id="barba-wrapper" class="main">
-  	<div class="barba-container">
+  <div class="main">
 
 <!-- <div id="pointer"></div>-->
   	<div id="follower"></div>
 	
-  <div class="sections">
+  <div id="barba-wrapper" class="sections">
+	    	<div class="barba-container">
+
     <div class="section section-1">
       <div class="content">
         <div class="bg-part"></div>
