--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="hidden">
+<body id="barba-wrapper" class="hidden">
 
 
 		<nav>
@@ -33,15 +33,14 @@
 			<div id="pointer"></div>
         	<div id="follower"></div>
 		</div>-->
-    
-  <div class="main">
+    	<div class="barba-container">
 
+  <div class="main">
+  
 <!-- <div id="pointer"></div>-->
   	<div id="follower"></div>
 	
-  <div id="barba-wrapper" class="sections">
-	    	<div class="barba-container">
-
+  <div class="sections">
     <div class="section section-1">
       <div class="content">
         <div class="bg-part"></div>
@@ -102,7 +101,7 @@
 		  </div>
       </div>
     </div>
-   </div>
+    
   </div>
 </div>
 	
@@ -128,6 +127,7 @@
 			
 	   </footer>
 		
+		  </div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
