--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="menu" style="margin-right:15%;">
 					
-				<a href="index.html"><h3>go back</h3></a>
+				<a href="index.html" style="text-decoration:none; color:#000000"><h3>go back</h3></a>
 				</div>
 				<div class="menu">
 					<h3>about</h3>
