--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
 </head>
 
-<body id="barba-wrapper" class="hidden">
+<body class="hidden">
 
-    	<div class="barba-container">
 
 		<nav>
 				<div class="logo">
@@ -35,8 +34,9 @@
         	<div id="follower"></div>
 		</div>-->
 
-  <div class="main">
-  
+  <div id="barba-wrapper" class="main">
+      	<div class="barba-container">
+
 <!-- <div id="pointer"></div>-->
   	<div id="follower"></div>
 	
@@ -101,7 +101,7 @@
 		  </div>
       </div>
     </div>
-    
+    		  </div>
   </div>
 </div>
 	
@@ -127,7 +127,6 @@
 			
 	   </footer>
 		
-		  </div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
@@ -167,6 +166,7 @@
 			
 		
 	</script>
+	
 	<script>
 		$('document').ready(function(){
 			var transEffect = Barba.BaseTransition.extend({
