--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="">
+<body  id="barba-wrapper" class="">
 
 		<nav>
 				<div class="logo">
@@ -27,9 +27,9 @@
 				</div>
 		</nav>
 
-    <div id="barba-wrapper" class="case-main">
+    <div class="case-main">
 		
-			      	<div class="barba-container">
+   <div class="barba-container">
 
 <!-- <div id="pointer"></div>-->
   		 <div id="follower"></div>
