--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="hidden">
+<body id="barba-wrapper" class="hidden">
 
 
 		<nav>
@@ -34,7 +34,7 @@
         	<div id="follower"></div>
 		</div>-->
 
-  <div id="barba-wrapper" class="main">
+  <div class="main">
       	<div class="barba-container">
 
 <!-- <div id="pointer"></div>-->
