--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -140,6 +140,7 @@
 		
 		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 	    <script  src="js/index.js"></script>
+    	<script  src="js/mouse.js"></script>
 
 	<script>
 		// Changing the defaults
@@ -171,8 +172,34 @@
 			
 		
 	</script>
+	
+	<script>
+		$('document').ready(function(){
+			var transEffect = Barba.BaseTransition.extend({
+                start: function(){
+                  this.newContainerLoading.then(val => this.fadeInNewcontent($(this.newContainer)));
+                },
+                fadeInNewcontent: function(nc) {
+                  nc.hide();
+                  var _this = this;
+                  $(this.oldContainer).fadeOut(1000).promise().done(() => {
+                    nc.css('visibility','visible');
+                    nc.fadeIn(1000, function(){
+                      _this.done();
+                    })
+                  });
+                }
+            });
+            Barba.Pjax.getTransition = function() {
+              return transEffect;
+            }
+			
+			Barba.Pjax.start();
+		});
 
-    <script  src="js/mouse.js"></script>
+	</script>
+
+
 
 
 
