--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body id="barba-wrapper" class="hidden">
-  	<div id="follower"></div>
+<!--  	<div id="follower"></div>-->
 
     	<div class="barba-container">
 
