--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -13,9 +13,9 @@
 </head>
 
 <body id="barba-wrapper" class="">
-	  		 <div id="follower"></div>
+<!--	  		 <div id="follower"></div>-->
 
-	      	<div class="barba-container">
+	 <div class="barba-container">
 
 		<nav>
 				<div class="logo">
