--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -16,7 +16,7 @@
 <!--	  		 <div id="follower"></div>-->
 
 	 <div class="barba-container">
-
+ <div id="follower"></div>
 		<nav>
 				<div class="logo">
 					<img src="imgs/logo-black.svg">
@@ -132,7 +132,6 @@
              
 			
 		</footer>
-</div>
 
   		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
@@ -199,6 +198,7 @@
 
 	</script>
 
+</div>
 
 
 
