--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body id="barba-wrapper" class="hidden">
+<body id="barba-wrapper">
 
    <div class="barba-container">
  <div id="follower"></div>
@@ -36,7 +36,7 @@
         	<div id="follower"></div>
 		</div>-->
 
-  <div class="main">
+  <div class="main hidden" >
   
 <!-- <div id="pointer"></div>-->
 	
