--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
 <body id="barba-wrapper">
 
-   <div class="barba-container">
+ <div class="barba-container">
+ <div class="hidden">
+	 
+	 
  <div id="follower"></div>
 
 		<nav>
@@ -36,7 +39,7 @@
         	<div id="follower"></div>
 		</div>-->
 
-  <div class="main hidden" >
+  <div class="main" >
   
 <!-- <div id="pointer"></div>-->
 	
@@ -122,7 +125,8 @@
 	  
 			
 	   </footer>
-		
+		  </div>
+
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
