--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 	   </footer>
 		  </div>
 
+  </div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
@@ -160,8 +161,32 @@
 			Barba.Pjax.start();
 		});
 
+		
+		// Changing the defaults
+			window.sr = ScrollReveal({ reset: true });
+
+		// Customizing a reveal set
+			sr.reveal('.hed', 
+			
+			   {scale: 0,
+				duration: 600,
+				container: document.querySelector('.case'),
+				mobile: false, 
+				viewFactor: 0.2,
+				
+		  },100);
+		
+		sr.reveal('.foo', 
+			
+			   {scale: 0,
+				origin: 'bottom',
+				duration: 900,
+				container: document.querySelector('.case'),
+				mobile: false, 
+				useDelay: 'onload',
+				viewFactor: 0.2,
+		  });
 	</script>
-  </div>
 
 </body>
 
