--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 
 </head>
 
-<body id="barba-wrapper">
+<body id="barba-wrapper" class="hidden">
 
- <div class="barba-container">
- <div class="hidden">
 	 
 	 
  <div id="follower"></div>
+ <div class="barba-container">
 
 		<nav>
 				<div class="logo">
@@ -125,7 +124,6 @@
 	  
 			
 	   </footer>
-		  </div>
 
   </div>
 
