--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -12,10 +12,9 @@
 
 </head>
 
-<body id="barba-wrapper">
+<body>
 <!--	  		 <div id="follower"></div>-->
 
-<div class="barba-container">
  <div id="follower"></div>
 		<nav>
 				<div class="logo">
@@ -132,41 +131,15 @@
              
 			
 		</footer>
-</div>
 
   		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
   		<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
 		
 		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-	    <script  src="js/index.js"></script>
     	<script  src="js/mouse.js"></script>
 
 	<script>
-		
-		$('document').ready(function(){
-			var transEffect = Barba.BaseTransition.extend({
-                start: function(){
-                  this.newContainerLoading.then(val => this.fadeInNewcontent($(this.newContainer)));
-                },
-                fadeInNewcontent: function(nc) {
-                  nc.hide();
-                  var _this = this;
-                  $(this.oldContainer).fadeOut(1000).promise().done(() => {
-                    nc.css('visibility','visible');
-                    nc.fadeIn(1000, function(){
-                      _this.done();
-                    })
-                  });
-                }
-            });
-            Barba.Pjax.getTransition = function() {
-              return transEffect;
-            }
-			
-			Barba.Pjax.start();
-		});
-
 		
 		// Changing the defaults
 			window.sr = ScrollReveal({ reset: true });
