--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="hidden">
+<body class="hidden animate-in">
 
 	 
 	 
@@ -134,9 +134,9 @@
 	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 	
 	<script>
-window.addEventListener("beforeunload", function () {
-  document.body.classList.add("animate-out");
-});
+		window.addEventListener("beforeunload", function () {
+			document.body.classList.add("animate-out");
+		});
 	</script>
 
 </body>
