--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -191,7 +191,7 @@
 	<script>
 		
 		// Changing the defaults
-			window.sr = ScrollReveal({ reset: true });
+			window.sr = ScrollReveal({ reset: false });
 
 		// Customizing a reveal set
 			sr.reveal('.hed', 
