--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         <div class="bg-part"></div>
 		  
          <div class="box">
-			<h2 class="section-heading">Tostitos Super Bowl</h2>
+			  <a href="tostitos.html" style="text-decoration:none; color:#000000">
+		   		<h2 class="section-heading">Tostitos Super Bowl</h2>
+			  </a>
 		  </div>
 		  <div class="texts">
 		  	<p class="additional-text up">WEBSITE</p>
