--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -158,7 +158,7 @@
 					<img class="foo" src="imgs/cc/obejtos.png" >
 				</div>
 				<div class="media">
-					<img class="foo" src="imgs/cc/lugares.png" >
+					<img class="foo" src="imgs/cc/dialecto.png" >
 				</div>
 				
 				<div class="text-container">
