--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -41,7 +41,7 @@
 			</section>
             
             <div class="divider">
-				<img class="hed" src="imgs/bg-cc.jpg">
+				<img class="hed" src="imgs/bg-cc.png">
 			</div>
             
 		
