--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 
 </head>
 
-<body class="hidden animate-in">
-
+<body class="hidden">
+	
+	<div id="loader-wrapper">
+ 
+    	<div class="loader-section section-left"></div>
+ 
+	</div>
 	 
 	 
  <div id="follower"></div>
@@ -37,11 +42,11 @@
         	<div id="follower"></div>
 		</div>-->
 
-  <div class="main" >
+  <div class="main barba-wrapper">
   
 <!-- <div id="pointer"></div>-->
 	
-  <div class="sections">
+  <div class="sections barba-container">
     
 	 <div class="section section-1">
       <div class="content">
@@ -132,10 +137,22 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
 
     <script  src="js/index.js"></script>
+    <script  src="js/barba.min.js"></script>
     <script  src="js/mouse.js"></script>
 	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 	
 	<script>
+		$('body').toggleClass('loaded');
+		
+		
+$(document).ready(function() {
+	
+	setTimeout(function(){
+		$('body').addClass('loaded');
+	}, 3000);
+	
+});
+		
 		window.addEventListener("beforeunload", function () {
 			document.body.classList.add("animate-out");
 		});
