--- a/index.html
+++ b/index.html
@@ -142,6 +142,18 @@
 	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 	
 	<script>
+		Barba.Pjax.start();
+		
+		var HideShowTransition = Barba.BaseTransition.extend({
+  start: function() {
+    this.newContainerLoading.then(this.finish.bind(this));
+  },
+
+  finish: function() {
+    document.body.scrollTop = 0;
+    this.done();
+  }
+});
 		$('body').toggleClass('loaded');
 		
 		
