--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -239,6 +239,11 @@
   }
 });
 		
+		Barba.Pjax.getTransition = function() {
+  return HideShowTransition;
+};
+		
+		
 		// Changing the defaults
 			window.sr = ScrollReveal({ reset: false });
 
