--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -226,23 +226,27 @@
          
 
 	<script>
-		Barba.Pjax.start();
-		
-		var HideShowTransition = Barba.BaseTransition.extend({
-  		start: function() {
-		this.newContainerLoading.then(this.finish.bind(this));
-		},
-
-  		finish: function() {
-  		  document.body.scrollTop = 0;
-  		  this.done();
-  		}
-		});
-		
-		Barba.Pjax.getTransition = function() {
-			return HideShowTransition;
-		};
-		
+		$('document').ready(function(){
+            var transEffect = Barba.BaseTransition.extend({
+                start: function(){
+                  this.newContainerLoading.then(val => this.fadeInNewcontent($(this.newContainer)));
+                },
+                fadeInNewcontent: function(nc) {
+                  nc.hide();
+                  var _this = this;
+                  $(this.oldContainer).fadeOut(1000).promise().done(() => {
+                    nc.css('visibility','visible');
+                    nc.fadeIn(1000, function(){
+                      _this.done();
+                    })
+                  });
+                }
+            });
+            Barba.Pjax.getTransition = function() {
+              return transEffect;
+            }
+            Barba.Pjax.start();
+          });
 		
 		// Changing the defaults
 			window.sr = ScrollReveal({ reset: false });
