--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			<div id="pointer"></div>
         	<div id="follower"></div>
 		</div>-->
-
-  <div class="main barba-wrapper">
+<div class="barba-wrapper">
+  <div class="main">
   
 <!-- <div id="pointer"></div>-->
 	
@@ -130,6 +130,7 @@
 			
 	   </footer>
 
+  </div>
   </div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
