--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
   
 <!-- <div id="pointer"></div>-->
 	
-  <div class="sections barba-container">
+  <div class="sections">
     
 	 <div class="section section-1">
       <div class="content">
         <div class="bg-part"></div>
-		  <div class="box">
+		  <div class="box barba-container">
 			  <a href="calicalabozo.html" style="text-decoration:none; color:#000000">
 		   		<h2 class="section-heading">Calicalabozo</h2>
 			  </a>
