--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -35,10 +35,10 @@
 				</div>
 		</nav>
 	<div class="barba-wrapper">
-    <div class="case-main">
+    <div class="case-main barba-container">
 <!-- <div id="pointer"></div>-->
 		 
-		<div class="case barba-container">
+		<div class="case">
 			<section class="header">
 				<h2 class="case-title hed">Calicalabozo</h2>
 				<p class="description-begin hed">We created an interactive website to represent the cultural aspects from the city that the writer Andrés Caicedo has inside his books and short stories. </p>
