--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
 </head>
 
 <body class="hidden">
-	
-	<div id="loader-wrapper">
- 
-    	<div class="loader-section section-left"></div>
- 
-	</div>
 	 
 	 
  <div id="follower"></div>
@@ -41,7 +35,6 @@
 			<div id="pointer"></div>
         	<div id="follower"></div>
 		</div>-->
-<div class="barba-wrapper">
   <div class="main">
   
 <!-- <div id="pointer"></div>-->
@@ -51,7 +44,7 @@
 	 <div class="section section-1">
       <div class="content">
         <div class="bg-part"></div>
-		  <div class="box barba-container">
+		  <div class="box">
 			  <a href="calicalabozo.html" style="text-decoration:none; color:#000000">
 		   		<h2 class="section-heading">Calicalabozo</h2>
 			  </a>
@@ -131,7 +124,6 @@
 	   </footer>
 
   </div>
-  </div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
@@ -143,38 +135,6 @@
 	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 	
 	<script>
-		$('document').ready(function(){
-            var transEffect = Barba.BaseTransition.extend({
-                start: function(){
-                  this.newContainerLoading.then(val => this.fadeInNewcontent($(this.newContainer)));
-                },
-                fadeInNewcontent: function(nc) {
-                  nc.hide();
-                  var _this = this;
-                  $(this.oldContainer).fadeOut(1000).promise().done(() => {
-                    nc.css('visibility','visible');
-                    nc.fadeIn(1000, function(){
-                      _this.done();
-                    })
-                  });
-                }
-            });
-            Barba.Pjax.getTransition = function() {
-              return transEffect;
-            }
-            Barba.Pjax.start();
-          });
-		
-		$('body').toggleClass('loaded');
-		
-		
-$(document).ready(function() {
-	
-	setTimeout(function(){
-		$('body').addClass('loaded');
-	}, 3000);
-	
-});
 		
 		window.addEventListener("beforeunload", function () {
 			document.body.classList.add("animate-out");
