--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<script src="js/barba.min.js" type="text/javascript"></script>
 
-	<meta name="description" content="Juan Castro is an Interactive Designer focus on Art Direction, Motion Graphics and User Experience.">
+	<meta name="description" content="Juan Castro is an Interactive Designer focus on Art Direction, Motion Graphics, Web Design and User Experience.">
 
 </head>
 
