--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<script src="js/barba.min.js" type="text/javascript"></script>
 
-	<meta name="description" content="Juan Castro is an Interactive Designer focus on Art Direction, Motion Graphics, Web Design and User Experience.">
+	<meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Motion Graphics, Web Design and User Experience.">
 
 </head>
 
@@ -53,6 +53,7 @@
 		   		<h2 class="section-heading">Calicalabozo</h2>
 			  </a>
 		  </div>
+		  <hr class="linea">
 		  <div class="texts">
 		  	<p class="additional-text up">WEBSITE</p>
 			<p class="additional-text down">SEE PROJECT</p>
@@ -70,9 +71,10 @@
 		  
          <div class="box">
 			  <a href="tostitos.html" style="text-decoration:none; color:#000000">
-		   		<h2 class="section-heading">Tostitos Super Bowl</h2>
+		   		<h2 class="section-heading">Tostitos Super Bowl Ad</h2>
 			  </a>
 		  </div>
+		  <hr class="linea">
 		  <div class="texts">
 		  	<p class="additional-text up">WEBSITE</p>
 			<p class="additional-text down">SEE PROJECT</p>
@@ -91,6 +93,7 @@
           <div class="box">
         	<h2 class="section-heading">Restaurant Mil810</h2>
 		  </div>
+		  <hr class="linea">
 		  <div class="texts">
 		  	<p class="additional-text up">BRANDING</p>
 			<p class="additional-text down">SEE PROJECT</p>
@@ -106,8 +109,9 @@
         <div class="bg-part"></div>
 		  
         	<div class="box">
-        		<h2 class="section-heading">One Time in New Orleans</h2>
+        		<h2 class="section-heading">N.O.L.A 300</h2>
 		  	</div>
+		  <hr class="linea">
 		  <div class="texts">
 		  	<p class="additional-text up">Installation</p>
 			<p class="additional-text down">SEE PROJECT</p>
