--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="js/barba.min.js" type="text/javascript"></script>
 
 	<meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Motion Graphics, Web Design and User Experience.">
+	<meta property="og:image" content="imgs/flag.jpg">
 
 </head>
 
