--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 					<img src="imgs/logo-black.svg">
 				</div>
 				<div class="menu">
+					<a href="about.html" style="text-decoration:none; color:#000000">
 					<h3>about</h3>
+			  </a>
 				</div>
 		</nav>
     
