--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Juan Castro • Interactive Designer</title>
     
     <link rel="stylesheet" href="css/style.css">
-	
 	<link rel="apple-touch-icon" sizes="180x180" href="imgs/favicon_package_v0.16/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon_package_v0.16/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon_package_v0.16/favicon-16x16.png">
@@ -30,7 +29,7 @@
 
 		<nav>
 				<div class="logo">
-					<img src="imgs/logo-black.svg">
+					<img src="imgs/logo.png">
 				</div>
 				<div class="menu">
 					<a href="about.html" style="text-decoration:none; color:#000000">
