--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
  <div id="follower" class="whitemouse"></div>
 		<nav>
 				<div class="logo">
-					<img src="imgs/logo.svg">
+					<img src="imgs/logo-white.png">
 				</div>
 				<div class="menu" style="margin-right:15%;">
 					
