--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="bg-part"></div>
 		  
           <div class="box">
-        	<h2 class="section-heading">Restaurant Mil810</h2>
+        	<h2 class="section-heading">Mil810</h2>
 		  </div>
 		  <hr class="linea">
 		  <div class="texts">
