--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     
     <title>Juan Castro • Interactive Designer</title>
     
-    <link rel="stylesheet" href="css/style.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="imgs/favicon_package_v0.16/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon_package_v0.16/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon_package_v0.16/favicon-16x16.png">
-	<link rel="manifest" href="imgs/favicon_package_v0.16/site.webmanifest">
-	<link rel="mask-icon" href="imgs/favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="msapplication-TileColor" content="#da532c">
+   <link rel="apple-touch-icon" sizes="180x180" href="imgs/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon/favicon-16x16.png">
+	<link rel="manifest" href="imgs/favicon/site.webmanifest">
+	<meta name="msapplication-TileColor" content="#000000">
 	<meta name="theme-color" content="#ffffff">
 	
 	<script src="js/barba.min.js" type="text/javascript"></script>
