--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     
     <title>Juan Castro • Interactive Designer</title>
     
-   <link rel="apple-touch-icon" sizes="180x180" href="imgs/favicon/apple-touch-icon.png">
+    <link rel="stylesheet" href="css/style.css">
+	
+	<link rel="apple-touch-icon" sizes="180x180" href="imgs/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon/favicon-16x16.png">
 	<link rel="manifest" href="imgs/favicon/site.webmanifest">
 	<meta name="msapplication-TileColor" content="#000000">
 	<meta name="theme-color" content="#ffffff">
-	
 	<script src="js/barba.min.js" type="text/javascript"></script>
 
 	<meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Motion Graphics, Web Design and User Experience.">
