--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 	
 	
 	
-<body class="hidden">
+<body class="hidden animate-in">
 <!--	  		 <div id="follower"></div>-->
 
  <div id="follower" class="whitemouse"></div>
