--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
 					<p class="description-begin foo"><a class="underline" href="http://toolofna.com/" target="_blank">Tool of North America</a></p>
 				</div>
 				
-				<div class="text-block-case">
+				<div class="text-block-case margin">
 					<p class="description-begin foo">Interactive Design Intern</p>
 				</div>
 				
