--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
         <div class="bg-part"></div>
         <div class="bg-part"></div>
         <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
  
 		  <div class="box">
 			  <a href="calicalabozo.html" style="text-decoration:none; color:#000000">
@@ -71,6 +82,17 @@
 	  
     <div class="section section-2">
       <div class="content">
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
         <div class="bg-part"></div>
         <div class="bg-part"></div>
         <div class="bg-part"></div>
@@ -95,6 +117,17 @@
         <div class="bg-part"></div>
         <div class="bg-part"></div>
         <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
   		  
           <div class="box">
         	<h2 class="section-heading">Mil810</h2>
@@ -108,6 +141,17 @@
     </div>
     <div class="section section-4">
       <div class="content">
+       <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
+        <div class="bg-part"></div>
         <div class="bg-part"></div>
         <div class="bg-part"></div>
         <div class="bg-part"></div>
