--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 				</div>
             
 			
-			<div class="container-about">
+			<div class="about-title">
 			<div class="about">
 				
 				<h2 class="about-title hed ">Don’t worry,<br> I’m sitting down so I’m being humble.
