--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -99,7 +99,7 @@
 			</section>
             
             <div class="divider">
-				<img class="hed" src="imgs/bg-cc.png">
+				<img class="hed" src="imgs/bg-cc.jpg">
 			</div>
             
 		
