--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 	
 	<footer>
                  <div class="foot"> 
-                      <h3>selected projects</h3>
+                      <h3>scroll down</h3>
                   </div>
         			<div class="sidebar-hover">
                     <h3> <p class="pagination">
