--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -121,6 +121,7 @@
 					<p class="category foo">01. User Experience</p>
 					<p class="description-begin foo">We created an interactive website to represent the cultural aspects from the city that the writer Andrés Caicedo has inside his books and short stories.</p>
 					<p class="description-begin foo">Research...</p>
+					<p class="description-begin foo">Style...</p>
 				</div>
 				
 				</div>
