--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
 
 <body class="hidden animate-in">
 	 
-	 
+	 <div class="preloader-wrap">
+  		<div class="percentage" id="precent"></div>
+  		<div class="loader">
+  		  <div class="trackbar">
+  		    <div class="loadbar"></div>
+			  
+			  <div class="box-list white">
+		  		<h2 class="text-list">Juan Castro</h2>
+	  		  </div>
+			  
+  		  </div>
+   		</div>
+	 </div>
+	
+	
  <div id="follower"></div>
 
 		<nav>
@@ -223,6 +237,7 @@
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
 
+    <script  src="js/loader.js"></script>
     <script  src="js/index.js"></script>
     <script  src="js/barba.min.js"></script>
     <script  src="js/mouse.js"></script>
