--- a/about.html
+++ b/about.html
@@ -37,9 +37,10 @@
 					<a href="index.html" style="text-decoration:none; color:#000000"><h3 class="white">go back</h3></a>
 				</div>
 		</nav>
+	
     <div class="about-main">
 <!-- <div id="pointer"></div>-->
-		     <div class="media photo">
+		     <div class=" photo">
 				</div>
 		<div class="case">
 			
