--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
  <div id="follower" class="whitemouse"></div>
 		<nav>
 				<div class="logo">
-					<img src="imgs/logo-white.png">
+					<img src="imgs/logo.png">
 				</div>
 				
 				<div class="menu">
