--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 	 </div>
 	
 	
- <div id="follower"></div>
+ <div id="follower" class="whitemouse"></div>
 
 		<nav>
 				<div class="logo">
-					<img src="imgs/logo.png">
+					<img src="imgs/logo-white.png">
 				</div>
 				<div class="menu">
 					<a href="about.html" style="text-decoration:none; color:#000000">
