--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<img src="imgs/logo-white.png">
 				</div>
 				<div class="menu">
-					<a href="about.html" style="text-decoration:none; color:#000000">
+					<a href="about.html" style="text-decoration:none; color:#fafafa">
 					<h3>about</h3>
 			  </a>
 				</div>
