--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
 	
 	
 	<footer>
-                 <div class="foot"> 
+                 <div class="foot white"> 
                       <h3>scroll down</h3>
                   </div>
-        			<div class="sidebar-hover">
+        			<div class="sidebar-hover white">
                     <h3> <p class="pagination">
                        <span class="page">01</span> - <span class="total-pages">08</span>
                      </p></h3>
