--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 	<meta name="msapplication-TileColor" content="#000000">
 	<meta name="theme-color" content="#ffffff">
 	<script src="js/barba.min.js" type="text/javascript"></script>
+	
+	<link href="https://fonts.googleapis.com/css?family=Gentium+Basic:400,700" rel="stylesheet">
 
+	
 	<meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Motion Graphics, Web Design and User Experience.">
 	<meta property="og:image" content="imgs/flag.jpg">
 
@@ -69,7 +72,7 @@
 			    </li>
 			    <li>
 					<a href="tostitos.html" style="text-decoration:none; color:#000000">
-		   				<h2 class="text-list">Super Bowl Ad</h2>
+		   				<h2 class="text-list">Corvette</h2>
 			  		</a>
 			    </li>
 			    <li>
