--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 			    </li>
 			    <li>
 					<a href="tostitos.html" style="text-decoration:none; color:#000000">
-		   				<h2 class="text-list">Corvette</h2>
+		   				<h2 class="text-list">Super Bowl Ad</h2>
 			  		</a>
 			    </li>
 			    <li>
 					<a href="calicalabozo.html" style="text-decoration:none; color:#000000">
-		   				<h2 class="text-list">MIL810</h2>
+		   				<h2 class="text-list">Corvette</h2>
 			  		</a>
 			    </li>
 			    <li>
