--- a/about.html
+++ b/about.html
@@ -64,11 +64,12 @@
 				</div>
 					
 				<div class="text-block-case margenD">
-					<p class="description-begin foo">
+					<p class="description-begin hed">
 				Hey there, my name is Juan Castro.
-					<br><br>
+					 </p><p class="description-begin hed">
 				I’m a freelance Interactive Designer currently working and living in Colombia. 
-						<br><br>
+					 </p>
+                    <p class="description-begin hed">
 				I’m passionate about art direction, motion graphics, user experiences and generally making cool stuff. 
 					</p>
 				</div>
