--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
    		</div>
 	 </div>
 	
-	
+	<canvas id="noise"></canvas>
+
  <div id="follower" class="whitemouse"></div>
 
 			<nav>
@@ -239,6 +240,7 @@
     <script  src="js/barba.min.js"></script>
 	  
     <script  src="js/mouse.js"></script>
+    <script  src="js/noise.js"></script>
 	<script  src="js/index.js"></script>
 	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 	
