--- a/about.html
+++ b/about.html
@@ -37,7 +37,8 @@
 					<a href="index.html" style="text-decoration:none; color:#000000"><h3 class="white">go back</h3></a>
 				</div>
 		</nav>
-	
+		<canvas id="noise"></canvas>
+
     <div class="about-main">
 <!-- <div id="pointer"></div>-->
 		     <div class=" photo">
@@ -172,6 +173,7 @@
   		<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
 		
 		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+	    <script  src="js/noise.js"></script>
 
     	<script  src="js/mouse.js"></script>
     
