--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
 	
 <body class="hidden animate-in">
 <!--	  		 <div id="follower"></div>-->
+	<canvas id="noise"></canvas>
 
  <div id="follower" class="whitemouse"></div>
 		<nav>
@@ -167,6 +168,7 @@
              
 			
 		</footer>
+    <script  src="js/noise.js"></script>
 
   		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
