--- a/about.html
+++ b/about.html
@@ -68,11 +68,22 @@
 				<div class="text-block-case margenD">
 					<p class="description-begin hed">
 				Hey there, my name is Juan Castro.
-					 </p><p class="description-begin hed">
-				I’m a freelance Interactive Designer currently working and living in Colombia. 
 					 </p>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                     <p class="description-begin hed">
+				I’m a freelance Interactive Designer currently working and living in Colombia.	 
 				I’m passionate about art direction, motion graphics, user experiences and generally making cool stuff. 
+					</p>
+                    <br>
+                    <br>
+                    <br>
+                    <p class="description-begin hed">
+                    <br>
+                    <p class="description-begin hed">
+				These are just fun facts: I love bad movies and pirates, I'm really bad with cables and I would love to have a vynil collection.
 					</p>
 				</div>
 				
