--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -38,8 +38,8 @@
 				</div>
 			
 			
-				<div class="menu black">
-					<a href="index.html" style="text-decoration:none; color:rgb(13,13,13);"><h3>go back</h3></a>
+				<div class="menu">
+					<a href="index.html" style="text-decoration:none;color:rgb(13,13,13);"><h3>go back</h3></a>
 				</div>
 		</nav>
 	</header>
