--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
                     <br>
                     <br>
                     <p class="description-begin hed">
-				I’m a freelance Interactive Designer currently working and living in Colombia.	 
-				I’m passionate about art direction, motion graphics, user experiences and generally making cool stuff. 
+				I’m a freelance Interactive Designer based in Colombia.	 
+				I’m passionate about art direction, motion graphics, web design, user experiences and generally making cool stuff. 
 					</p>
                     <br>
                     <br>
@@ -97,7 +97,7 @@
 				</div>
 					
 				<div class="text-block-experience">
-					<p class="description-about foo"> Freelancer, Anywhere </p>
+					<p class="description-about foo"> Freelance, Anywhere </p>
 				</div>
 				
 				<div class="text-block-experience margin">
