--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 				</div>
                 <div class="logo">	
                     
-						<h3>interactive designer</h3>
+						<h3>Juan Castro</h3>
 			         
 				</div>
-				<div class="menu">
+				<div class="menu big">
 					<a href="about.html" style="text-decoration:none; color:#fafafa">
 						<h3>about</h3>
 			 			</a>
@@ -221,7 +221,7 @@
                 <div class="foot white"> 
                       <h3>selected projects</h3>
                   </div>
-        			<div class="sidebar-hover white">
+        			<div class="sidebar-hover white big">
                     <h3> <p class="pagination">
                        <span class="page">01</span> - <span class="total-pages">08</span>
                      </p></h3>
