--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 					<img src="imgs/logo-white.png">
 				</div>
 				
-				<div class="menu">
+				<div class="menu big">
 					<a href="index.html" style="text-decoration:none; color:#000000"><h3 class="white">go back</h3></a>
 				</div>
 		</nav>
