--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -38,7 +38,7 @@
 				</div>
 			
 			
-				<div class="menu">
+				<div class="menu big">
 					<a href="index.html" style="text-decoration:none;color:rgb(13,13,13);"><h3>go back</h3></a>
 				</div>
 		</nav>
