--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -389,7 +389,7 @@
 				duration: 600,
 				container: document.querySelector('.case'),
 				mobile: false, 
-				viewFactor: 0.2,
+				viewFactor: 0.2
 				
 		  },100);
 		
@@ -397,14 +397,14 @@
 			
 			   {scale: 0,
 				origin: 'bottom',
-				distance: '15px',
+				distance: '35px',
 				duration: 600,
 				easing: 'cubic-bezier(0.6, 0.2, 0.1, 1)',
 				container: document.querySelector('.case'),
 				mobile: false,
 				useDelay: 'onload',
 				mobile: false, 
-				viewFactor: 0.1,
+				viewFactor: 0.02
 		  });
 	</script>
 	
