--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
 
     <script  src="js/loader.js"></script>
-    <script  src="js/barba.min.js"></script>
+    <script  src="js/transition.js"></script>
 	  
     <script  src="js/noise.js"></script>
 	<script  src="js/index.js"></script>
