--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 				</div>
 		</nav>
 
-    <div class="about-main">
+    <div class="main">
 		
 <!-- <div id="pointer"></div>-->
 		     <div class="photo">
