--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -342,7 +342,8 @@
 		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 
     	<script  src="js/mouse.js"></script>
-    
+        <script  src="js/transition.js"></script>
+
          <script>
 			 
 			 // Hide Header on on scroll down
