--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
              
 			
 		</footer>
-    <script  src="js/noise.js"></script>
+        <script  src="js/noise.js"></script>
 
   		<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>	
 
@@ -248,7 +248,7 @@
 		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
  
     	<script  src="js/mouse.js"></script>
-    
+    <script  src="js/transition.js"></script>
          <script>
              function myFunction(){
                  var copyText = document.getElementById("myInput");
