--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -26,7 +26,7 @@
 	
 	
 	
-<body class="hidden">
+<body class="hidden animate-in">
 <!--	  		 <div id="follower"></div>-->
  
 
@@ -43,7 +43,7 @@
 				</div>
 		</nav>
 	</header>
-    <div class="case-main">
+    <div class="main">
 <!-- <div id="pointer"></div>-->
 		 
  		<div class="case white">
