--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 
 <body class="hidden animate-in">
 	 
-	 <div class="preloader-wrap">
+	 <!--<div class="preloader-wrap">
   		<div class="percentage" id="precent"></div>
   		<div class="loader">
   		  <div class="trackbar">
   		    <div class="loadbar"></div>
-<!--  		 <h2 class="section-heading white">Juan Castro</h2>-->
+  		 <h2 class="section-heading white">Juan Castro</h2>
    			  
   		  </div>
    		</div>
-	 </div>
+	 </div>-->
 	
 	<canvas id="noise"></canvas>
 
