--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
 		  	<ul id="scroller">
       			<li>
 					<a href="calicalabozo.html" style="text-decoration:none; color:#000000">
-		   				<h2 class="text-list">Calicalabozo</h2>
+		   				<h2 class="text-list big">Calicalabozo</h2>
 					</a>
 			    </li>
 			    <li>
 					<a href="tostitos.html" style="text-decoration:none; color:#000000">
-		   				<h2 class="text-list">Super Bowl Ad</h2>
+		   				<h2 class="text-list big">Super Bowl Ad</h2>
 			  		</a>
 			    </li>
 			    <li>
 					<a href="calicalabozo.html" style="text-decoration:none; color:#000000">
-		   				<h2 class="text-list">Corvette</h2>
+		   				<h2 class="text-list big">Corvette</h2>
 			  		</a>
 			    </li>
 			    <li>
 					<a href="calicalabozo.html" style="text-decoration:none; color:#000000">
-		   				<h2 class="text-list">NOLA 300</h2>
+		   				<h2 class="text-list big">NOLA 300</h2>
 			  		</a>
 			    </li>  
 		  	</ul>
