--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
 	
 	
 	<footer>
-                 <div class="foot white down big"> 
+                 <div class="foot white arrow-down big"> 
                       <h3>
                           <i class="fa fa-angle-down" style="font-size:36px"></i>
                       </h3>
                      
                   </div>
         
-                <div class="foot white up big"> 
+                <div class="foot white arrow-up big"> 
                         <h3>
                           <i class="fa fa-angle-up" style="font-size:36px"></i>
                         </h3>
