--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 			    </li>
 			    <li>
 					<a href="tostitos.html" style="text-decoration:none; color:#000000">
-		   				<h2 class="text-list big">Super Bowl Ad</h2>
+		   				<h2 class="text-list big">Latin Cuisine</h2>
 			  		</a>
 			    </li>
 			    <li>
 					<a href="calicalabozo.html" style="text-decoration:none; color:#000000">
-		   				<h2 class="text-list big">Corvette</h2>
+		   				<h2 class="text-list big">Super Bowl Ad</h2>
 			  		</a>
 			    </li>
 			    <li>
@@ -146,7 +146,7 @@
 		  </div>-->
 		  <hr class="linea">
 		  <div class="texts">
-		  	<p class="additional-text up">WEBSITE</p>
+		  	<p class="additional-text up">Branding</p>
 			<p class="additional-text down">SEE PROJECT</p>
 		  </div>
 		  
@@ -174,7 +174,7 @@
 		  </div>-->
 		  <hr class="linea">
 		  <div class="texts">
-		  	<p class="additional-text up">BRANDING</p>
+		  	<p class="additional-text up">Website</p>
 			<p class="additional-text down">SEE PROJECT</p>
 		  </div>      
 		</div>
