--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
     
-    <title>Calicalabozo • Juan Castro </title>
+    <title>Calicalabozo - Juan Castro </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
@@ -15,11 +15,25 @@
 	<link rel="manifest" href="imgs/favicon/site.webmanifest">
 	<meta name="msapplication-TileColor" content="#000000">
 	<meta name="theme-color" content="#f1f1f1">
-	
-	
-	<script src="js/barba.min.js" type="text/javascript"></script>
-	
-	<meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Motion Graphics and User Experience.">
+	 
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
+    <meta property="image" content="imgs/cover-meta.png">
+
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="imgs/cover-meta.png">
+    <meta name="twitter:title" content="Juan Castro - Interactive Designer">
+    <meta name="twitter:description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
+    <meta name="twitter:site" content="@unmochilero">
+    <meta name="twitter:creator" content="@unmochilero">
+    <meta name="twitter:image:src" content="imgs/cover-meta.png">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="Juan Castro - Interactive Designer">
+    <meta name="og:description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
+    <meta name="og:image" content="imgs/cover-meta.png">
+    <meta name="og:url" content="LINK AL ARTÍCULO">
 
 </head>
 
