--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
-    <meta property="image" content="imgs/cover-meta.png">
-
+    
+    <meta itemprop="name" content="Juan Castro - Interactive Designer">
+    <meta itemprop="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
+    <meta itemprop="image" content="imgs/cover-meta.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="imgs/cover-meta.png">
@@ -33,7 +35,8 @@
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Juan Castro - Interactive Designer">
     <meta name="og:description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
-    <meta name="og:image" content="imgs/cover-meta.png">
+    <meta name="og:image:width" content="1200">
+    <meta name="og:image:height" content="600">
     <meta name="og:url" content="LINK AL ARTÍCULO">
 
 </head>
