--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Juan Castro - Interactive Designer">
     <meta name="og:description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
+    <meta name="og:image" content="imgs/cover-meta.png">
     <meta name="og:image:width" content="1200">
     <meta name="og:image:height" content="600">
     <meta name="og:url" content="LINK AL ARTÍCULO">
