--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
 	<meta name="theme-color" content="#ffffff">
 		
      <meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
-    
+        <meta name="image" content="imgs/cover-meta.png">
+
     <meta itemprop="name" content="Juan Castro - Interactive Designer">
     <meta itemprop="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
     <meta itemprop="image" content="imgs/cover-meta.png">
