--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta name="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
-    
+    <meta name="image" content="imgs/cover-meta.png">
+
     <meta itemprop="name" content="Juan Castro - Interactive Designer">
     <meta itemprop="description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
     <meta itemprop="image" content="imgs/cover-meta.png">
