--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -26,7 +26,7 @@
     <meta itemprop="image" content="imgs/cover-meta.png">
 
     <!-- Twitter -->
-    <meta name="twitter:card" content="imgs/cover-meta.png">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Juan Castro - Interactive Designer">
     <meta name="twitter:description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
     <meta name="twitter:site" content="@unmochilero">
