--- a/about.html
+++ b/about.html
@@ -35,7 +35,8 @@
     <meta name="og:image" content="imgs/cover-meta.png">
     <meta name="og:image:width" content="1200">
     <meta name="og:image:height" content="600">
-    <meta name="og:url" content="LINK AL ARTÍCULO">
+    <meta name="og:url" content="https://juanccastro.github.io/fwa">
+
  	
 
 </head>
