--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -38,7 +38,7 @@
     <meta name="og:image" content="imgs/cover-meta.png">
     <meta name="og:image:width" content="1200">
     <meta name="og:image:height" content="600">
-    <meta name="og:url" content="https://juanccastro.github.io/fwa/">
+    <meta name="og:url" content="https://juanccastro.github.io/fwa">
 
 </head>
 
