--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <meta name="og:image" content="imgs/cover-meta.png" />
     <meta name="og:image:width" content="1200" />
     <meta name="og:image:height" content="600" />
-    <meta name="og:url" content="https://juanccastro.github.io/fwa" />
+    <meta name="og:url" content="https://juanccastro.github.io/fwa/" />
     
 	
 	<link rel="apple-touch-icon" sizes="180x180" href="imgs/favicon/apple-touch-icon.png">
