--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience." />
     <meta name="twitter:site" content="@unmochilero" />
     <meta name="twitter:creator" content="@unmochilero" />
-    <meta name="twitter:image:src" content="imgs/cover-meta.png" />
+    <meta name="twitter:image" content="imgs/cover-meta.png" />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Juan Castro - Interactive Designer" />
     <meta name="og:description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience." />
