--- a/about.html
+++ b/about.html
@@ -34,6 +34,8 @@
 <meta name="og:title" content="Juan Castro - Interactive Designer">
 <meta name="og:description" content="Juan Castro is an Interactive Designer focused on Art Direction, Web Design, Motion Graphics and User Experience.">
 <meta name="og:image" content="https://juanccastro.github.io/fwa/imgs/cover-meta.png">
+<meta name="og:image:width" content="1200">
+<meta name="og:image:height" content="600">
 <meta name="og:url" content="https://juanccastro.github.io/fwa/">
 <meta name="og:site_name" content="Juan Castro - Interactive Designer">
 <meta name="og:type" content="website">
