--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -369,11 +369,23 @@
 		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 
     	<script  src="js/mouse.js"></script>
-    	<script  src="js/smooth-scrolling.js"></script>
+    	<script  src="js/build.js"></script>
     
      <script>
-         var scroll = new Smooth({ native: true, preload: true });
-         scroll.init();
+       import Custom from './custom'
+
+const scroll = new Custom({
+    preload: false,
+    native: false,
+    direction: 'horizontal',
+    section: document.querySelector('.vs-section'),
+    divs: document.querySelectorAll('.vs-div')
+})
+
+scroll.init()
+})
+
+scroll.init()
     </script>
     
 <script>
