--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
 			         
 				</div>
 				<div class="menu big">
-					<a href="about.html" style="text-decoration:none;color:#fafafa">
-						<h3>about</h3>
-			 			</a>
+					<a href="about.html" style="text-decoration:none;color:rgb(255,255,255)"><h3>go back</h3></a>
 				</div>
 			</nav>
     
