--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 						<h3>Juan Castro</h3>
 			         
 				</div>
-				<div class="menu big">
-					<a href="about.html" style="text-decoration:none;color:rgb(255,255,255)"><h3>go back</h3></a>
+				<div class="menu big white">
+					<a href="about.html" class="white" style="text-decoration:none;"><h3>about</h3></a>
 				</div>
 			</nav>
     
