--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -372,7 +372,7 @@
     	<script  src="js/build.js"></script>
     
      <script>
-       import Custom from './custom'
+       import Custom from 'js/custom'
 
 const scroll = new Custom({
     preload: false,
