--- a/calicalabozo.html
+++ b/calicalabozo.html
@@ -369,7 +369,7 @@
 		<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 
     	<script  src="js/mouse.js"></script>
-        <script src="smooth-scrolling.js"></script>
+        <script src="js/smooth-scrolling.js"></script>
   
     	
     <script>
