--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
     
-    <title>About Me - Juan Castro</title>
+    <title>About Me — Juan Castro</title>
     
     <link rel="stylesheet" href="css/style.css">
 
