--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
 					</a>
 			    </li>
 			    <li>
-					<a href="tostitos.html" style="text-decoration:none; color:#000000">
+					<a href="mil.html" style="text-decoration:none; color:#000000">
 		   				<h2 class="text-list big">Latin Cuisine</h2>
 			  		</a>
 			    </li>
 			    <li>
-					<a href="calicalabozo.html" style="text-decoration:none; color:#000000">
+					<a href="tostitos.html" style="text-decoration:none; color:#000000">
 		   				<h2 class="text-list big">Super Bowl Ad</h2>
 			  		</a>
 			    </li>
