--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     
     <title>About Me — Juan Castro</title>
     
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="css/style.css">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="imgs/favicon/apple-touch-icon.png">
